--- a/ETL-2- SALESFORCE/ETL AWS_TO_SALESFORCE.ipynb
+++ b/ETL-2- SALESFORCE/ETL AWS_TO_SALESFORCE.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make sure to use your own `config.py` file. Consider ensuring that these variable names are in sync\n",
+    "# use  `config.py` file. Consider ensuring that these variable names are in sync\n",
     "from config import sf_username, sf_password, sf_security_token\n",
     "from config import remote_db_endpoint, remote_db_port\n",
     "from config import remote_db_name, remote_db_user, remote_db_pwd"
